# auto-mihomo

./: .env.example  .gitignore  README.md  build_package.sh  install.sh  pyproject.toml  upgrade.sh
scripts/: cron_update_proxy.sh  generate_config.py  generate_secrets.sh  mcp_server.py  node_exclude_list.txt  node_favourite_list.txt  patch_openclaw_proxy.sh  post_deploy_self_check.sh  proxy-bootstrap.cjs  proxy-bootstrap.js  rotate_secrets_and_restart.sh  start_openclaw_with_proxy.sh  sync_secrets_to_1password.sh  test_nodes.py  update_sub.sh
skill/: SKILL.md
systemd/: auto-mihomo-mcp.service  mihomo.service  openclaw-gateway.service
systemd/openclaw-gateway.service.d/: 10-auto-mihomo.conf
